tests/specs/ecosystem/felix/argon2/1_0_5.test
felix/argon2/1.0.5
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
  get name(): string {
      ~~~~
    at file://<tmpdir>/lib/error.ts:12:7

error: Type checking failed.

